feat(auth): 访客可执行任务操作
